sapl-node/kubernetes/sapl-node.yml
#
# Copyright (C) 2017-2026 Dominic Heutelbeck (dominic@heutelbeck.com)
#
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: v1
kind: Service
metadata:
  name: sapl-node
spec:
  type: ClusterIP
  selector:
    app: sapl-node
  ports:
    - protocol: TCP
      name: https
      # The targetPort defines is the port on the POD that requests get sent to
      targetPort: 8443
      # The port exposes the service on the specified port internally within the cluster.
      port: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapl-node
  labels:
    app: sapl-node
spec:
  selector:
    matchLabels:
      app: sapl-node
  replicas: 1
  template:
    metadata:
      labels:
        app: sapl-node
    spec:
      containers:
        - name: sapl-node
          image: ghcr.io/heutelbeck/sapl-node:4.0.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
              name: https
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: sapl-node
  labels:
    app: sapl-node
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - sapl-node'
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
    nginx.ingress.kubernetes.io/proxy-read-timeout: '2147483647'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '2147483647'
spec:
  tls:
    - hosts:
        - sapl.lt.local
      secretName: sapl.lt.local-tls
  rules:
    - host: sapl.lt.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sapl-node
                port:
                  number: 8443
  ingressClassName: nginx
